Removes List.of  to make compatible with JDK 8